--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -8,5 +8,10 @@ services:
             -   name: form.type_extension
                 extended_type: 'Symfony\Component\Form\Extension\Core\Type\FormType'
 
+    Becklyn\OrderedFormBundle\Form\Extension\ButtonPositionExtension:
+        tags:
+            -   name: form.type_extension
+                extended_type: 'Symfony\Component\Form\Extension\Core\Type\ButtonType'
+
 
     Becklyn\OrderedFormBundle\Form\ResolvedType\OrderedResolvedFormTypeFactory: ~
