--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -3,15 +3,6 @@ services:
         autowire: true
         autoconfigure: true
 
-    Becklyn\OrderedFormBundle\Form\Extension\FormPositionExtension:
-        tags:
-            -   name: form.type_extension
-                extended_type: 'Symfony\Component\Form\Extension\Core\Type\FormType'
-
-    Becklyn\OrderedFormBundle\Form\Extension\ButtonPositionExtension:
-        tags:
-            -   name: form.type_extension
-                extended_type: 'Symfony\Component\Form\Extension\Core\Type\ButtonType'
-
-
-    Becklyn\OrderedFormBundle\Form\ResolvedType\OrderedResolvedFormTypeFactory: ~
+    Becklyn\OrderedFormBundle\:
+        resource: '../../*'
+        exclude: '../../{DependencyInjection,Exception,Resources,BecklynOrderedFormBundle.php}'
