--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,14 @@
     "homepage": "https://github.com/Becklyn/OrderedFormBundle",
     "require": {
         "php": ">=7.4",
-        "symfony/config": "^v5.4.3 || ^v6.0.3",
-        "symfony/dependency-injection": "^v5.4.3 || ^v6.0.3",
-        "symfony/form": "^v5.4.3 || ^v6.0.3",
-        "symfony/http-kernel": "^v5.4.4 || ^v6.0.4"
+        "symfony/config": "^5.4.3 || ^6.0.3",
+        "symfony/dependency-injection": "^5.4.3 || ^6.0.3",
+        "symfony/form": "^5.4.3 || ^6.0.3",
+        "symfony/http-kernel": "^5.4.4 || ^6.0.4"
     },
     "require-dev": {
         "roave/security-advisories": "dev-master",
-        "symfony/phpunit-bridge": "^v5.4.3 || ^v6.0.3"
+        "symfony/phpunit-bridge": "^5.4.3 || ^6.0.3"
     },
     "autoload": {
         "psr-4": {
